xee-xpath/tests/snapshots/xpath__cast_date_time_stamp_millis_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
assertion_line: 1025
expression: "run(\"('2019-01-03T15:14:30.123+01:00' cast as xs:dateTimeStamp) cast as xs:string\")"
---
Ok(
    One(
        One {
            item: Atomic(
                String(
                    String,
                    "2019-01-03T15:14:30.123+01:00",
                ),
            ),
        },
    ),
)
