xee-xpath/tests/snapshots/xpath__cast_empty_sequence_as_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() cast as xs:string\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPTY0004,
            message: Some(
                "Type error.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                20,
            ),
        ),
    },
)
