xee-xpath/tests/snapshots/xpath__default_last_no_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:last()\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPDY0002,
            message: Some(
                "Component absent in dynamic context.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                9,
            ),
        ),
    },
)
