xee-xpath/tests/snapshots/xpath__default_position_no_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:position()\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPDY0002,
            message: None,
        },
        span: Some(
            SourceSpan(
                0,
                13,
            ),
        ),
    },
)
