xee-xpath/tests/snapshots/xpath__default_position_with_operation.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:position() + 1\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPDY0002,
            message: None,
        },
        span: Some(
            SourceSpan(
                0,
                17,
            ),
        ),
    },
)
