xee-xpath/tests/snapshots/xpath__fn_root_absent.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:root()\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPDY0002,
            message: None,
        },
        span: Some(
            SourceSpan(
                0,
                9,
            ),
        ),
    },
)
