xee-xpath/tests/snapshots/xpath__keyword_element_name_unprefixed.snap
---
source: xee-xpath/tests/xpath.rs
assertion_line: 1355
expression: "run_xml(\"<data><child>found it</child></data>\", \"//child/string()\",)"
---
Ok(
    One(
        One {
            item: Atomic(
                String(
                    String,
                    "found it",
                ),
            ),
        },
    ),
)
