xee-xpath/tests/snapshots/xpath__keyword_qname_and.snap
---
source: xee-xpath/tests/xpath.rs
assertion_line: 1407
expression: "run_xml_with_ns(r#\"<data xmlns:ex=\"http://example.com/ex\"><ex:and>found it</ex:and></data>\"#,\n\"//ex:and/string()\", &[(\"ex\", \"http://example.com/ex\")])"
---
Ok(
    One(
        One {
            item: Atomic(
                String(
                    String,
                    "found it",
                ),
            ),
        },
    ),
)
